[project]
name = "gmgn-crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pytest-flask>=1.3.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
]
